# LongLoRA

./: .gitignore  README.md  command.md  cuda_test.py  custom_eval_trainer.py  distributed_evaluator.py  eval.py  eval_distributed.py  eval_distributed_qlora.py  fine_tune.py  fine_tune_qlora.py  get_trainable_weights.py  local_7b.py  local_7b_eval.py  local_7b_fine_tune.py  local_7b_supervised_fine_tune.py  pg19_dataset.py  pyproject.toml  redpajama_1t_sample_preparation.py  sagemaker_7b.py  sagemaker_7b_eval.py  sagemaker_7b_eval_distributed.py  sagemaker_7b_eval_qlora.py  sagemaker_7b_fine_tune.py  sagemaker_7b_fine_tune_qlora.py  sagemaker_7b_supervised_fine_tune.py  sagemaker_7b_supervised_fine_tune_qlora.py  sagemaker_cpu_7b_fine_tune.py  supervised_dataset_v1.py  supervised_dataset_v2.py  supervised_fine_tune.py  supervised_fine_tune_qlora.py
notebook/: LongAlpaca.ipynb
