[tool.poetry]
name = "longlora"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.6"
numpy = "1.26.1"
torch = "2.0.0"
rouge-score = "0.1.2"
datasets = "2.14.5"
einops = "0.7.0"
peft = "0.5.0"
flash-attn = "2.2.1"
deepspeed = "0.11.1"
huggingface-hub = "0.18.0"
transformers = "4.33.3"
bitsandbytes = "^0.41.1"
scipy = "^1.11.3"
sentencepiece = "^0.1.99"
protobuf = "^4.24.4"

[tool.poetry.group.dev.dependencies]
numpy = "1.26.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
